fix: filter pill baseline on Safari

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -974,6 +974,7 @@ body:not(.home) .page__content h6 * {
 .thoughts-card__badges {
   display: flex;
   align-items: center;
+  -webkit-align-items: center;
   gap: 0.38em;
   width: fit-content;
   margin: 0.1em 0 0.36em;
